# september

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Leptos.toml  README.md  features.yml
.github/workflows/: build.yml  ci.yml  integration.yml  release.yml  test.yml
config/: default.toml  test.toml
docs/: architecture.md  background-refresh.md  extending-nntp.md  nntp-service.md  oidc.md  routing.md  testing.md
public/: index.html
scripts/: run_browser_tests.sh
src/: app.rs  bridge.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  nntp.rs  state.rs  templates.rs
src/http/: mod.rs  redirect.rs  server.rs  shutdown.rs  static_files.rs
src/nntp/: client.rs  federated.rs  messages.rs  mod.rs  service.rs  tls.rs  worker.rs
src/oidc/: mod.rs  session.rs
src/routes/: article.rs  auth.rs  health.rs  home.rs  mod.rs  post.rs  privacy.rs  threads.rs
static/css/: style.css
static/js/: app.js
style/: main.scss
templates/: compose.html  home.html
templates/article/: view.html
templates/auth/: login.html
templates/partials/: footer.html  header.html  pagination.html
templates/threads/: list.html  view.html
tests/: browser_tests.rs
tests/integration/: README.md  collect-logs.sh  conftest.py  pyproject.toml  test.sh  test_articles.py  test_auth.py  test_home.py  test_http_headers.py  test_observability.py  test_posting.py  test_threads.py  test_visibility_latency.py
tests/integration/environment/: Dockerfile.renews  Dockerfile.september  docker-compose.yml  seed_nntp.py  setup.sh  teardown.sh
tests/integration/environment/config/: dex.yaml  renews.toml  september.toml
tests/integration/helpers/: __init__.py  data.py  exceptions.py  logs.py  selectors.py  waits.py
tests/integration/pages/: __init__.py  article.py  base.py  browse.py  compose.py  dex.py  group.py  home.py  thread.py
tests/integration/testlogging/: __init__.py  analysis.py  capture.py  models.py  performance.py  visibility.py
