[package]
name = "september"
version = "0.1.0"
edition = "2021"
description = "A web interface to NNTP servers"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
http = "1"

# NNTP client
nntp-rs = { git = "https://github.com/forever-august/nntp-rs", features = ["tokio-runtime"] }

# TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
webpki-roots = "0.26"
rustls-pki-types = "1"
async-trait = "0.1"

# Templating
tera = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
const_format = "0.2"

# Error handling
thiserror = "2"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Request ID generation
uuid = { version = "1", features = ["v4"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-channel = "2"

# Authentication
openidconnect = "4"
axum-extra = { version = "0.10", features = ["cookie-private"] }

# Caching
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10.9"
hkdf = "0.12.4"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
time = "0.3"
serde_json = "1"

